@@ -3,6 +3,14 @@
 
 version 3.006:
 
+	Improvements:
+	- Mail::Box::POP3 and Mail::Transport::POP3 can set SSL during
+	  construction.
+	  rt.cpan.org#140896 [Yanyan Yang]
+
+	Changes:
+	- Default SSL options disable verification.
+
 version 3.005: Fri  3 May 09:41:53 CEST 2019
 
 	Fixes:
